# human-traffic-analyzer-rust-rekognition-nextjs

./: README.md
cdk/: package-lock.json  package.json
cdk/lib/: database-stack.ts  frontend-stack.ts  handler-stack.ts
lambdas/: Cargo.toml
lambdas/api-gateway-lambda/: Cargo.toml
lambdas/api-gateway-lambda/src/: handler_params.rs  handlers.rs  main.rs
lambdas/lib/: Cargo.toml
lambdas/lib/src/: common_structs.rs  constants.rs  env_keys.rs  lib.rs
lambdas/lib/src/common_service/: dynamo_service.rs  mod.rs  rekognition_service.rs  s3_service.rs
nextjs/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
nextjs/src/app/: globals.css  layout.tsx  metadata.tsx  page.tsx  providers.tsx
nextjs/src/app/[jobId]/result/: page.tsx
nextjs/src/app/dashboard/: page.tsx
nextjs/src/app/lookup/: page.tsx
nextjs/src/app/new/: page.tsx
nextjs/src/components/: footer.tsx  header.tsx  jobTable.tsx  rect.tsx
nextjs/src/icons/: arrowLeftIcon.tsx  arrowRightIcon.tsx  pauseIcon.tsx  playIcon.tsx  rotateIcon.tsx  searchIcon.tsx  trashIcon.tsx
nextjs/src/lib/: RekognitionService.ts  UserService.ts  VideoManager.ts  serverFunctions.ts
nextjs/src/lib/types/: dynamoTypes.ts  resultTypes.ts
