[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-smithy-types = { workspace = true }
tokio = { workspace = true }
aws-sdk-rekognition = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws_lambda_events = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid =  { workspace = true }
axum = { workspace = true }


aws-sdk-dynamodb = "1.43.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
